src/objects/State_Abbreviation__mdt.object
<CustomObject>
    <description>This will be used for mapping values of Abbreviation to State. For Ex. FL for state Florida.</description>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>State Abbreviation</label>
    <pluralLabel>State Abbreviations</pluralLabel>
</CustomObject>